--- a/views/pages/deltcolor.ejs
+++ b/views/pages/deltcolor.ejs
@@ -4,12 +4,12 @@
   <%- include ("../partials/header.ejs") %>
 </head>
 
-<body style='background-color:rgb(237, 248, 248)'>
+<body>
 
 <div class="container">
-<h4 style='color:red'>update set color complete!</h4>
+<h4 style='color:red'>delete select from color complete!</h4>
 
-<form action="/db" method="get">
+    <form action="/db" method="get">
         <input  type="submit" name="submit" />
     </form>
     </div>   
