--- a/views/pages/upid.ejs
+++ b/views/pages/upid.ejs
@@ -7,7 +7,7 @@
 <body style='background-color:rgb(237, 248, 248)'>
 
 <div class="container">
-<h4 style='color:red'>update set name from id complete!</h4>
+<h4 style='color:red'>update set id complete!</h4>
 
     <form action="/db" method="get">
         <input  type="submit" name="submit" />
