--- a/views/pages/upwidth.ejs
+++ b/views/pages/upwidth.ejs
@@ -7,9 +7,9 @@
 <body style='background-color:rgb(237, 248, 248)'>
 
 <div class="container">
-<h4 style='color:red'>update set color complete!</h4>
+<h4 style='color:red'>update set width complete!</h4>
 
-<form action="/db" method="get">
+    <form action="/db" method="get">
         <input  type="submit" name="submit" />
     </form>
     </div>   
