--- a/views/pages/detail.ejs
+++ b/views/pages/detail.ejs
@@ -9,8 +9,6 @@
 <body style='background-color:rgb(237, 248, 248)'>
 
 <div class="container">
-<h4>Rectangles</h4>
-
 <table class = "table" border = '1'>  
     <th></th> <th>name</th> <th>color</th> <th>width</th> <th>height</th> 
     <% results.forEach(function(r) { %> 
@@ -21,12 +19,48 @@
             <td style='background-color:<%= r.color %>'> <%= r.color %> </td>
             <td> <%= r.width %> </td>
             <td> <%= r.height %> </td>
+
           </tr>
-    <% }); %>
+    <% }); %> 
 </table>
 <form action="/db" method="get">
-        <input type="submit" name = "back"/>
+        <input  type="submit" name="submit" value = "back to the rectangle" />
     </form>
+<h4>update name rectangles</h4>
+    <% results.forEach(function(r) { %> 
+    <form action="/upid/<%= r.id %>" method="post"> 
+        <label for="name">name</label>
+       <input type="text" name="name" /> 
+        <input  type="submit" name="submit" />
+    </form>
+  <% }); %> 
+
+<h4>update color rectangles</h4>
+    <% results.forEach(function(r) { %> 
+    <form action="/upcolor/<%= r.id %>" method="post">
+        <label for="color">color</label>
+       <input type="text" name="color" /> 
+        <input  type="submit" name="submit" />
+    </form>
+     <% }); %> 
+
+<h4>update width rectangles</h4>
+    <% results.forEach(function(r) { %> 
+    <form action="/width/<%= r.id %>" method="post">
+        <label for="width">width</label>
+       <input type="text" name="width" /> 
+        <input  type="submit" name="submit" />
+    </form>
+     <% }); %> 
+
+<h4>update height rectangles</h4>
+    <% results.forEach(function(r) { %> 
+    <form action="/upheight/<%= r.id %>" method="post">
+        <label for="height">width</label>
+       <input type="text" name="height" /> 
+        <input  type="submit" name="submit" />
+    </form>
+     <% }); %> 
 </div>
 
 </body>
